--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,7 @@ p {
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   font-size: 3rem;
+  line-height: 1.5;
   font-weight: 700;
   padding: 50px;
 }
